--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 										<article>
 											<span class="icon solid fa-database"></span>
 											<div class="content">
-												<h4>Josef Ressel Centre for <br /> Robust Decision Making</h4>
+												<h4><a href="https://www.fhv.at/rodec/">Josef Ressel Centre for <br /> Robust Decision Making</a></h4>
 											
 											<p> Reducing the impact of uncertainties on data-driven real-world problems.
 											</div>
