--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 										</header>
 											<p>
 											I am a Senior Researcher in the field of Optimization and Director of the 
-											Josef Ressel Centre for Robust Decision Making at the <a href="https://www.fhv.at/forschung/business-informatics/">Research Centre Business Informatics</a>
+												<a href="https://www.fhv.at/rodec/">Josef Ressel Centre for Robust Decision Making</a> at the <a href="https://www.fhv.at/forschung/business-informatics/">Research Centre Business Informatics</a>
 											of <a href="https://www.fhv.at">FH Vorarlberg University of Applied Sciences</a>.<br />
 											
 											I have received a Diploma in Mathematics from the Technical 
@@ -77,7 +77,7 @@
 										<article>
 											<span class="icon solid fa-database"></span>
 											<div class="content">
-												<h4><a href="https://www.fhv.at/rodec/">Josef Ressel Centre for <br /> Robust Decision Making</a></h4>
+												<a href="https://www.fhv.at/rodec/"><h4>Josef Ressel Centre for <br /> Robust Decision Making</h4></a>
 											
 											<p> Reducing the impact of uncertainties on data-driven real-world problems.
 											</div>
