--- a/lecture.html
+++ b/lecture.html
@@ -51,19 +51,22 @@
 										<article>
 											<span class="icon solid fa-chalkboard-teacher"></span>
 											<div class="content">
-												<h3>FH Vorarlberg</h3>
+												<h3>FH Vorarlberg (since 2018)</h3>
 											
 											<ul> 
-												<li>  </li>
-												<li>Reducing the impact of uncertainties on data-driven real-world problems.</li>
+												<li> Multidimensional Analysis <br /> <strong> Study program: </strong> Electrical Engineering Dual BSc </li><br /> 
+												<li> Mathematics for Environmental Technology <br /> <strong> Study program: </strong> Environment and Engineering BSc </li>
 											</ul>
 											</div>
 										</article>
 										<article>
 											<span class="icon solid fa-university"></span>
 											<div class="content">
-												<h3>University of Liechtenstein</h3>
-												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+												<h3>University of Liechtenstein (since 2020)</h3>
+												<ul> 
+													<li> Statistics <br /> <strong> Study program: </strong> Business Administration BSc </li><br /> 
+													<li> Business Mathematics <br /> <strong> Study program: </strong> Business Administration BSc </li>
+												</ul>
 											</div>
 										</article>
 									</div>
@@ -78,19 +81,24 @@
 										<article>
 											<span class="icon solid fa-chalkboard-teacher"></span>
 											<div class="content">
-												<h4>FH Vorarlberg</h4>
+												<h3>FH Vorarlberg (since 2015)</h3>
 											
 											<ul> 
-												<li>  </li>
-												<li>Reducing the impact of uncertainties on data-driven real-world problems.</li>
+												<li> Sensor Systems (Machine Learning part) <br /> <strong> Study program: </strong> Mechanical Engineering MSc </li><br />
+												<li> Analysis <br /> <strong> Study program: </strong> Electrical Engineering Dual BSc </li><br /> 
+												<li> Business Analysis <br /> <strong> Study program: </strong> International Business BSc </li>
 											</ul>
 											</div>
 										</article>
 										<article>
 											<span class="icon solid fa-school"></span>
 											<div class="content">
-												<h3>Schloss Hofen</h3>
-												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+												<h3>Schloss Hofen (2015 - 2020)</h3>
+											<ul> 
+												<li> Basic Mathematics </li><br /> 
+												<li> Basic Physics </li><br /> 
+												<li> Oscillations, Waves and Acoustics<br /> <strong> Study program: </strong> Ropeway Engineering MSc </li>
+											</ul>
 											</div>
 										</article>
 									</div>
@@ -115,7 +123,7 @@
 										<li><a href="lecture.html">Lectures</a></li>
 										<li><a href="cv.html">Curriculum Vitae</a></li>
 										<li><a href="publications.html">Publications</a></li>
-										<li><a href="cv.html">Curriculum Vitae</a></li>
+										<li><a href="cv.html">Downloads</a></li>
 									</ul>
 								</nav>
 
