--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 										<li><a href="lecture.html">Lectures</a></li>
 										<li><a href="cv.html">Curriculum Vitae</a></li>
 										<li><a href="publications.html">Publications</a></li>
-										<li><a href="cv.html">Curriculum Vitae</a></li>
+										<li><a href="cv.html">Downloads</a></li>
 									</ul>
 								</nav>
 
