--- a/research.html
+++ b/research.html
@@ -51,7 +51,7 @@
 										<dt><strong>Jan 2021 - Dec 2023</strong></dt>
 										<dd><em>Project leader</em><br />
 										OEAD Austria's Agency for Education and Internationalisation networking project
-										<cite>"Collective Evolutionstrategies for Learning on Non-Euclidean Data"</cite>.<br />
+										<cite>"Collective Evolution Strategies for Learning on Non-Euclidean Data"</cite>.<br />
 										A brief project info is available <a href="https://www.fhv.at/forschung/business-informatics/projekte/nicht-euklidischen-daten/" target="_blank" >here</a></strong> (german only).</dd><br />	
 										
 										<dt><strong>Jun 2020 - Mar 2021</strong></dt>
