--- a/cv.html
+++ b/cv.html
@@ -141,7 +141,7 @@
 										<li><a href="lecture.html">Lectures</a></li>
 										<li><a href="cv.html">Curriculum Vitae</a></li>
 										<li><a href="publications.html">Publications</a></li>
-										<li><a href="cv.html">Curriculum Vitae</a></li>
+										<li><a href="dwmlads.html">Downloads</a></li>
 									</ul>
 								</nav>
 
