--- a/research.html
+++ b/research.html
@@ -146,7 +146,7 @@
 										<li><a href="lecture.html">Lectures</a></li>
 										<li><a href="cv.html">Curriculum Vitae</a></li>
 										<li><a href="publications.html">Publications</a></li>
-										<li><a href="cv.html">Curriculum Vitae</a></li>
+										<li><a href="dwnlds.html">Downloads</a></li>
 									</ul>
 								</nav>
 
