--- a/publications.html
+++ b/publications.html
@@ -195,7 +195,7 @@
 	<a href="http://ffhoarep.fh-ooe.at/handle/123456789/1214">http://ffhoarep.fh-ooe.at/handle/123456789/1214</a></p> 
 	
 	<li><p style="margin-bottom: 0.2in; line-height: 130%">Hellwig,
-	Michael and Beyer, Hans-Georg (2015).<br /> <strong>Technical Report: Population
+	M. and Beyer, H.-G. (2015).<br /> <strong>Technical Report: Population
 	Size Control of CMSA-ES for Noisy Optimization Using Time Series
 	Analysis.</strong><br />
 	<a href="http://www.fhv.at/media/pdf/forschung/prozess-und-produktengineering/working-papers/working-papers-2015">http://www.fhv.at/media/pdf/forschung/prozess-und-produktengineering/working-papers/working-papers-2015</a></p>
