--- a/cv.html
+++ b/cv.html
@@ -24,8 +24,8 @@
 								<header id="header">
 									<a href="index.html" class="logo">Dr. Michael Hellwig</a>
 									<ul class="icons">
-										<li><a href="https://twitter.com/michaelhellwig9" class="icon brands fa-twitter" target="_blank"><span class="label">Twitter</span></a></li>
 										<li><a href="https://www.linkedin.com/in/link2hemi/" class="icon brands fa-linkedin" target="_blank"><span class="label">LinkedIn</span></a></li>
+										<li><a href="https://mastodon.online/@hemi" class="icon brands fa-mastodon" target="_blank"><span class="label">Mastodon</span></a></li>	
 										<li><a href="https://github.com/hellwigm" class="icon brands fa-github" target="_blank"><span class="label"><GitHub</span></a></li>
 										<li><a href="https://www.researchgate.net/profile/Michael-Hellwig" target="_blank" class="icon brands fa-researchgate"><span class="label">ResearchGate</span></a></li>
 
@@ -48,7 +48,7 @@
 									Research Center Business Informatics, FH Vorarlberg University of Applied Sciences, Dornbirn, Austria.</dd><br />
 									
 									<dt><strong>Jul 2021 - today</strong></dt>
-									<dd>Senior researcher in Computer Science (Optimization / Machine Learning)<br />
+									<dd>Senior Scientist in Computer Science (Optimization / Machine Learning)<br />
 									Research Center Business Informatics, FH Vorarlberg University of Applied Sciences, Dornbirn, Austria.</dd><br />
 								
 									<dt><strong>Sep 2020 - today</strong></dt>
@@ -147,17 +147,17 @@
 
 
 							<!-- Section -->
-								<section>
+							<section>
 									<header class="major">
 										<h2>Get in touch</h2>
 									</header>
 									<ul class="contact">
-										<li class="icon solid fa-envelope"><a href="#">michael.hellwig@fhv.at</a></li>
+										<li class="icon solid fa-envelope"><a href="mailto:michael.hellwig@fhv.at"> michael.hellwig@fhv.at </a></li>
 										<li class="icon solid fa-phone">+43 (0)5572 792 7112</li>
 										<li class="icon solid fa-home">FH Vorarlberg <br /> 
 											University of Applied Sciences<br />
 											Research Center Business Informatics<br />
-											<a href="images/pic02.jpg"> Room S012</a><br />
+											Room V621 <br />
 											Campus V, Hochschulstr. 1<br />
 											6850 Dornbirn, Austria
 										</li>
