--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
 											</div>
 										</article>
 										<article>
-											<span class="icon solid fa-paper-plane"></span>
+											<span class="icon solid fa-signal"></span>
 											<div class="content">
-											<a href="https://www.fhv.at/forschung/business-informatics/projekte/nicht-euklidischen-daten/" target="_blank" > <h4>Collective Evolution Strategies for <br />Learning on Non-Euclidean Data</h4></a>
-												<p> Understanding the working principles of search heuristics on manifolds.</p>
+											<a href="https://www.fhv.at/forschung/business-informatics/projekte/" target="_blank" > <h4>IoT Sustainability Lab </h4></a>
+												<p> Towards the efficient use of IoT for a sustainable future.</p>
 											</div>
 										</article>
 									</div>
