--- a/publications.html
+++ b/publications.html
@@ -44,45 +44,63 @@
 						 	
 									<h4>Peer-reviewed</b></h4>
 <ul>
-	<li><p style="margin-bottom: 0.2in; line-height: 130%">Hellwig, M. and
-	Beyer, H.-G. (2020b).<br /> 
-	<strong>A Modified Matrix Adaptation Evolution Strategy with Restarts for Constrained Real-World Problems.</strong><br /> 
-	In 2020 IEEE Congress on Evolutionary Computation (CEC), pages 1–8,
-	Glasgow. IEEE. <a href="https://doi.org/10.1109/CEC48606.2020.9185566">https://doi.org/10.1109/CEC48606.2020.9185566</a></p>
-	<li><p style="margin-bottom: 0.2in; line-height: 130%">Hellwig, M. and
-	Beyer, H.-G. (2020a).<br /> <strong>Analyzing Design Principles for Competitive
-	Evolution Strategies in Constrained Search Spaces.</strong><br /> Transactions on
-	Evolutionary Learning and Optimization, pages 1–40. under review</p>
-	<li><p style="margin-bottom: 0.2in; line-height: 130%">Spettel, P.,
-	Beyer, H.-G., and Hellwig, M. (2019).<br /> <strong>Steady State Analysis of a
-	Multi-Recombinative Meta-ES on a Conically Constrained Problem with
-	Comparison to σ SA and CSA.</strong><br /> In Proceedings of the 15<sup>th</sup>
-	ACM/SIGEVO Conference on Foundations of Genetic Algorithms, FOGA
-	’19, pages 43–57, New York, NY, USA. Association for Computing
-	Machinery. <a href="https://doi.org/10.1145/3299904.3340306">https://doi.org/10.1145/3299904.3340306</a></p>
-	<li><p style="margin-bottom: 0.2in; line-height: 130%">Hellwig, M.,
-	Spettel, P., and Beyer, H.-G. (2019b).<br /> <strong>Comparison of Contemporary
-	Evolutionary Algorithms on the Rotated Klee-Minty Problem.</strong><br /> In
-	Proceedings of the Genetic and Evolutionary Computation Conference
-	Companion, GECCO ’19, pages 1879–1887, New York, NY, USA.
-	Association for Computing Machinery.
-	<a href="https://doi.org/10.1145/3319619.3326805">https://doi.org/10.1145/3319619.3326805</a></p>
-	<li><p style="margin-bottom: 0.2in; line-height: 130%">Hellwig, M. and
-	Beyer, H.-G. (2019a).<br /> <strong>Analysis of a Meta-ES on a Conically
-	Constrained Problem.</strong><br /> In Proceedings of the Genetic and Evolutionary
-	Computation Conference, GECCO ’19, pages 673–681, New York, NY,
-	USA. Association for Computing Machinery.
-	<a href="https://doi.org/10.1145/3321707.3321824">https://doi.org/10.1145/3321707.3321824</a></p>
-	<li><p style="margin-bottom: 0.2in; line-height: 130%">Hellwig, M.,
-	Entner, D., Prante, T., Zăvoianu, A.-C., Schwarz, M., and Fink, K.
-	(2019a).<br /> <strong>Optimization of Ascent Assembly Design Based on a
-	Combinatorial Problem Representation.</strong><br /> In Andrés-Pérez, E.,
-	González, L. M., Periaux, J., Gauger, N., Quagliarella, D., and
-	Giannakoglou, K., editors, Evolutionary and Deterministic Methods
-	for Design Optimization and Control With Applications to Industrial
-	and Societal Problems, volume 49, pages 291–306. Springer
-	International Publishing, Cham.
-	<a href="https://dx.doi.org/10.1007/978-3-319-89890-2_19">https://dx.doi.org/10.1007/978-3-319-89890-2_19</a></p>
+	<li>
+		<p style="margin-bottom: 0.2in; line-height: 130%">Hellwig, M. and Beyer, H.-G. (2022).<br /> 
+		<strong>Benchmarking epsilonMAg-ES and BP-epsilonMAg-ES on the bbob-constrained Testbed.</strong><br /> 
+		In Proceedings of the Genetic and Evolutionary Computation Conference (Companion), GECCO ’22, pages 1-8, New York, NY,
+		USA. Association for Computing Machinery (ACM).
+		<a href="https://doi.org/">https://doi.org/</a></p>
+	<li>
+		<p style="margin-bottom: 0.2in; line-height: 130%">Urban, S., Moodbrugger, N., Hellwig, M., and Dobler, M. (2023).<br /> 
+		<strong>Sustainable Smart Services for Financial Institutions: A Framework to Support Banks in ESG Integration in the 
+		Risk Analysis Process of Loans.</strong><br /> 
+		In West, S., Meierhofer, J., and Mangla, U., editors, 2023 Smart Services Summit, pages 1–8,
+		Zurich. Springer Cham. <a href="https://doi.org/">https://doi.org/</a></p>
+	<li>
+		<p style="margin-bottom: 0.2in; line-height: 130%">Suzic, B., Urban, S., Hellwig, and M., Dobler, M. (2022).<br /> 
+		<strong>Smart Circular Economy Value Drivers: The Role of the Financial Sector in Stimulating Smart Regional Innovation-Driven Growth.</strong><br /> 
+		In West, S., Meierhofer, J., and Mangla, U., editors, 2022 Smart Services Summit, pages 1–8,
+		Zurich. Springer Cham. <a href="https://doi.org/">https://doi.org/</a></p>
+	<li>
+		<p style="margin-bottom: 0.2in; line-height: 130%">Hellwig, M., Finck, S., Mootz, T., Ehe, A., and Rein, F. (2022).<br /> 
+		<strong>NLP for Product Safety Risk Assessment: Towards consistency evaluations of human expert panels.</strong><br /> 
+		In 2020 ISDA, pages 1–8,
+		Online. Springer. <a href="https://doi.org/">https://doi.org/</a></p>
+	<li>
+		<p style="margin-bottom: 0.2in; line-height: 130%">Hellwig, M. and Beyer, H.-G. (2020).<br /> 
+		<strong>A Modified Matrix Adaptation Evolution Strategy with Restarts for Constrained Real-World Problems.</strong><br /> 
+		In 2020 IEEE Congress on Evolutionary Computation (CEC), pages 1–8,
+		Glasgow. IEEE. <a href="https://doi.org/10.1109/CEC48606.2020.9185566">https://doi.org/10.1109/CEC48606.2020.9185566</a></p>
+	<!--<li>
+		<p style="margin-bottom: 0.2in; line-height: 130%">Hellwig, M. and Beyer, H.-G. (2020a).<br /> 
+		<strong>Analyzing Design Principles for Competitive Evolution Strategies in Constrained Search Spaces.</strong><br /> 
+		Transactions onEvolutionary Learning and Optimization, pages 1–40. under review</p> -->
+	<li>
+		<p style="margin-bottom: 0.2in; line-height: 130%">Spettel, P., Beyer, H.-G., and Hellwig, M. (2019).<br /> 
+		<strong>Steady State Analysis of a Multi-Recombinative Meta-ES on a Conically Constrained Problem with Comparison to 
+		σSA and CSA.</strong><br /> 
+		In Proceedings of the 15<sup>th</sup> ACM/SIGEVO Conference on Foundations of Genetic Algorithms, FOGA ’19, pages 43–57,
+		 New York, NY, USA. Association for Computing Machinery (ACM). 
+		 <a href="https://doi.org/10.1145/3299904.3340306">https://doi.org/10.1145/3299904.3340306</a></p>
+	<li>
+		<p style="margin-bottom: 0.2in; line-height: 130%">Hellwig, M., Spettel, P., and Beyer, H.-G. (2019b).<br /> 
+		<strong>Comparison of Contemporary Evolutionary Algorithms on the Rotated Klee-Minty Problem.</strong><br /> 
+		In Proceedings of the Genetic and Evolutionary Computation Conference Companion, GECCO ’19, pages 1879–1887, New York, NY, USA.
+		Association for Computing Machinery (ACM).
+		<a href="https://doi.org/10.1145/3319619.3326805">https://doi.org/10.1145/3319619.3326805</a></p>
+	<li>
+		<p style="margin-bottom: 0.2in; line-height: 130%">Hellwig, M. and Beyer, H.-G. (2019a).<br /> 
+		<strong>Analysis of a Meta-ES on a Conically Constrained Problem.</strong><br /> 
+		In Proceedings of the Genetic and Evolutionary Computation Conference, GECCO ’19, pages 673–681, New York, NY,
+		USA. Association for Computing Machinery (ACM).
+		<a href="https://doi.org/10.1145/3321707.3321824">https://doi.org/10.1145/3321707.3321824</a></p>
+	<li>
+		<p style="margin-bottom: 0.2in; line-height: 130%">Hellwig, M., Entner, D., Prante, T., Zăvoianu, A.-C., Schwarz, M., and Fink, K. (2019a).<br />
+		<strong>Optimization of Ascent Assembly Design Based on a Combinatorial Problem Representation.</strong><br /> 
+		In Andrés-Pérez, E., González, L. M., Periaux, J., Gauger, N., Quagliarella, D., and Giannakoglou, K., editors, Evolutionary and Deterministic Methods
+		for Design Optimization and Control With Applications to Industrial and Societal Problems, volume 49, pages 291–306. Springer
+		International Publishing, Cham.
+		<a href="https://dx.doi.org/10.1007/978-3-319-89890-2_19">https://dx.doi.org/10.1007/978-3-319-89890-2_19</a></p>
 	<li><p style="margin-bottom: 0.2in; line-height: 130%">Zăvoianu,
 	A.-C., Saminger-Platz, S., Entner, D., Prante, T., Hellwig, M.,
 	Schwarz, M., and Fink, K. (2019).<br /> <strong>On the Optimization of 2D Path
