--- a/research.html
+++ b/research.html
@@ -42,6 +42,12 @@
 									
 									<h3>Research projects</h3>						
 									<dl>
+										<dt><strong>Apr 2023 - Mar 2027 </strong></dt>
+										<dd><em>Project leader</em><br />
+										Interreg ABH project
+										<cite>"IoT Sustainability Lab"</cite>.<br />
+										The project page will soon be available <a href="https:// " target="_blank" >here</a></strong>.</dd><br />
+									
 										<dt><strong>Jul 2021 - Jun 2026 </strong></dt>
 										<dd><em>Project leader</em><br />
 										Christian Doppler Research Association (CDG) project
