--- a/publications.html
+++ b/publications.html
@@ -45,27 +45,43 @@
 									<h4>Peer-reviewed</b></h4>
 <ul>
 	<li>
-		<p style="margin-bottom: 0.2in; line-height: 130%">Hellwig, M. and Beyer, H.-G. (2022).<br /> 
-		<strong>Benchmarking epsilonMAg-ES and BP-epsilonMAg-ES on the bbob-constrained Testbed.</strong><br /> 
-		In Proceedings of the Genetic and Evolutionary Computation Conference (Companion), GECCO ’22, pages 1-8, New York, NY,
-		USA. Association for Computing Machinery (ACM).
+		<p style="margin-bottom: 0.2in; line-height: 130%">Hellwig, M. and Finck, S. (2023).<br /> 
+		<strong>Joining Emission Data from Diverse Economical Activity Taxonomies with Evolution Strategies.</strong><br /> 
+		In The 9th International Conference on Machine Learning, Optimization, and Data Science (LOD 2023), pages 1–15,
+		Grasmere, Lake District, England - UK. Springer (accepted). 
+		<a href="https://doi.org/">https://doi.org/</a></p>
+	<li>
+		<p style="margin-bottom: 0.2in; line-height: 130%">Salcher, F., Finck, S., and Hellwig, M. (2023).<br /> 
+		<strong>Automated Process Capability Analysis for Product Quality Improvements.</strong><br /> 
+		In proceedings of the 29th IEEE International Conference on Engineering, Technology and Innovation (ICE/ITMC), Edinburgh, UK, pages 1 – 9. IEEE (in press). 
+		<a href="https://doi.org/">https://doi.org/</a></p>
+	<li>
+		<p style="margin-bottom: 0.2in; line-height: 130%">Hutter, D., Hellwig, M., and Jatowt, A. (2023).<br /> 
+		<strong>Adaptive and Dynamic Scheduling for Robust Production Planning.</strong><br /> 
+		The 35th Swedish AI Society’s annual workshop (SAIS), Karlskrona, Sweden (in press). 
 		<a href="https://doi.org/">https://doi.org/</a></p>
 	<li>
 		<p style="margin-bottom: 0.2in; line-height: 130%">Urban, S., Moodbrugger, N., Hellwig, M., and Dobler, M. (2023).<br /> 
 		<strong>Sustainable Smart Services for Financial Institutions: A Framework to Support Banks in ESG Integration in the 
 		Risk Analysis Process of Loans.</strong><br /> 
 		In West, S., Meierhofer, J., and Mangla, U., editors, 2023 Smart Services Summit, pages 1–8,
-		Zurich. Springer Cham. <a href="https://doi.org/">https://doi.org/</a></p>
+		Zurich. Springer Cham. <a href="https://doi.org/10.1007/978-3-031-36698-7_15">https://doi.org/10.1007/978-3-031-36698-7_15</a></p>
+	<li>
+		<p style="margin-bottom: 0.2in; line-height: 130%">Hellwig, M. and Beyer, H.-G. (2022).<br /> 
+		<strong>Benchmarking epsilonMAg-ES and BP-epsilonMAg-ES on the bbob-constrained Testbed.</strong><br /> 
+		In Proceedings of the Genetic and Evolutionary Computation Conference (Companion), GECCO ’22, pages 1-8, New York, NY,
+		USA. Association for Computing Machinery (ACM).
+		<a href="https://doi.org/10.1145/3520304.3534010">https://doi.org/10.1145/3520304.3534010</a></p>
 	<li>
 		<p style="margin-bottom: 0.2in; line-height: 130%">Suzic, B., Urban, S., Hellwig, and M., Dobler, M. (2022).<br /> 
 		<strong>Smart Circular Economy Value Drivers: The Role of the Financial Sector in Stimulating Smart Regional Innovation-Driven Growth.</strong><br /> 
 		In West, S., Meierhofer, J., and Mangla, U., editors, 2022 Smart Services Summit, pages 1–8,
-		Zurich. Springer Cham. <a href="https://doi.org/">https://doi.org/</a></p>
+		Zurich. Springer Cham. <a href="https://doi.org/10.1007/978-3-030-97042-0_6">https://doi.org/10.1007/978-3-030-97042-0_6</a></p>
 	<li>
 		<p style="margin-bottom: 0.2in; line-height: 130%">Hellwig, M., Finck, S., Mootz, T., Ehe, A., and Rein, F. (2022).<br /> 
 		<strong>NLP for Product Safety Risk Assessment: Towards consistency evaluations of human expert panels.</strong><br /> 
 		In 2020 ISDA, pages 1–8,
-		Online. Springer. <a href="https://doi.org/">https://doi.org/</a></p>
+		Online. Springer. <a href="https://doi.org/10.1007/978-3-030-96308-8_24">https://doi.org/10.1007/978-3-030-96308-8_24</a></p>
 	<li>
 		<p style="margin-bottom: 0.2in; line-height: 130%">Hellwig, M. and Beyer, H.-G. (2020).<br /> 
 		<strong>A Modified Matrix Adaptation Evolution Strategy with Restarts for Constrained Real-World Problems.</strong><br /> 
