--- a/publications.html
+++ b/publications.html
@@ -239,17 +239,17 @@
 <ul>	
 		<li>
 		<p style="margin-bottom: 0.2in; line-height: 130%">Hellwig, M. (2023).<br /> 
-		<strong>HA. </strong>
+		<strong> Designing & Deploying Artificial Intelligence Applications: Potential and Challenges </strong>
 		<a href="http:// ">http:// </a></p>	
 	<li>
 		<p style="margin-bottom: 0.2in; line-height: 130%">Hellwig, M. (2023).<br /> 
-		<strong>H. </strong>
+		<strong>How to shape a more sustainable future with Artificial Intelligence? </strong>
 		<a href="http:// ">http:// </a></p>	
 	<li>
 		<p style="margin-bottom: 0.2in; line-height: 130%">Hellwig, M. (2021).<br /> 
 		<strong>Hill climbing towards Sesame Street: Applied Research in Computational Learning. </strong>
 		Invited talk for OMICRON ACADEMY Knowledge Exchange Series, Omicron electronics GmBH, Klaus, Austria. December 16th, 2021
-		<a href="http:// ">http:// </a></p>	
+		<!--<a href="http:// ">http:// </a></p>	-->
 </ul>
 
 						 
@@ -257,17 +257,20 @@
 <h4 style="margin-bottom: 0.2in; line-height: 130%"><b>Other media</b></h4>
 <ul>
 	<li>
-		<p style="margin-bottom: 0.2in; line-height: 130%">Hellwig, M. (2023).<br /> 
-		<strong> </strong>		
-		<a href="http:// ">http:// </a></p>	
+		<p style="margin-bottom: 0.2in; line-height: 130%">Hellwig, M. (August, 2023).<br /> 
+		<strong>Auf den Spuren Künstlicher Intelligenz in Vorarlberg</strong>		
+		<a href="https://themavorarlberg.at/wissenschaft/auf-den-spuren-kuenstlicher-intelligenz-vorarlberg">https://themavorarlberg.at/wissenschaft/auf-den-spuren-kuenstlicher-intelligenz-vorarlberg</a></p>	
+
 	<li>
-		<p style="margin-bottom: 0.2in; line-height: 130%">Hellwig, M. (2023).<br /> 
-		<strong> </strong>
-		<a href="http:// ">http:// </a></p>	
+		<p style="margin-bottom: 0.2in; line-height: 130%">Hellwig, M. (April, 2022).<br /> 
+		<strong>Zukunftsfähige Entscheidungen in unsicheren Zeiten</strong>
+		<a href="https://themavorarlberg.at/quergedacht/zukunftsfaehige-entscheidungen-unsicheren-zeiten">https://themavorarlberg.at/quergedacht/zukunftsfaehige-entscheidungen-unsicheren-zeiten</a></p>	
+
 	<li>
-		<p style="margin-bottom: 0.2in; line-height: 130%">Hellwig, M. (2023).<br /> 
-		<strong> </strong>
-		<a href="http:// ">http:// </a></p>	
+		<p style="margin-bottom: 0.2in; line-height: 130%">Hellwig, M. (2021).<br /> 
+		<strong> Josef Ressel Zentrum für Robuste Entscheidungen an der FHV eröffnet </strong>
+		<a href="https://www.wirtschaftszeit.at/news/josef-ressel-zentrum-fuer-robuste-entscheidungen-an-der-fhv-eroeffnet/">https://www.wirtschaftszeit.at/news/josef-ressel-zentrum-fuer-robuste-entscheidungen-an-der-fhv-eroeffnet/</a></p>	
+
 </ul>
 
 						</div>
