--- a/cv.html
+++ b/cv.html
@@ -43,6 +43,10 @@
 							<!-- Section -->
 						 	
 									<dl>
+									<dt><strong>Sep 2023</strong></dt>
+									<dd>COST Academy - Leadership workshop<br />
+									European Cooperation in Science and Technology, Brussels, Belgium.</dd><br />										
+									
 									<dt><strong>Apr 2023</strong></dt>
 									<dd>Project lead for IoT Sustainability Innovation Lab<br />
 									funded by Interreg ABH, FH Vorarlberg University of Applied Sciences, Dornbirn, Austria.</dd><br />										
