--- a/foga21.html
+++ b/foga21.html
@@ -50,7 +50,7 @@
 			
 
 			Paper Submission
-		</h3></a></div><div class="column"><a href="https://hellwigm.github.io/foga21/keynotes-program/" class="btn btn-block btn-card " role="button"><h3>
+		</h3></a></div><div class="column"><a href="https://hellwigm.github.io/foga21/KeynotesProgram.html" class="btn btn-block btn-card " role="button"><h3>
 			
 
 			Keynotes &amp; Program
