--- a/foga21/KeynotesProgram.html
+++ b/foga21/KeynotesProgram.html
@@ -73,7 +73,8 @@
 <div class="container container-info">
 	
 		
-<div id="c74128" class="frame frame-default frame-type-text frame-layout-0"><p><a href="https://snapshot.labs.fhv.at/2023-02-02/foga2021/index.html"><i class="fa fa-home"></i>Return to FOGA 2021 main page</a></p></div>
+<div id="c74128" class="frame frame-default frame-type-text frame-layout-0"><p>
+<a href="https://hellwigm.github.io/foga21"><i class="fa fa-home"></i>Return to FOGA 2021 main page</a></p></div>
 
 
 	
